[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "viz-python-lib"
version = "0.1.0"
description = "python library for VIZ blockchain"
authors = ["Vladimir Kamarzin <vvk@vvk.pp.ru>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/VIZ-Blockchain/viz-python-lib"
packages = [
    { include = "viz" },
    { include = "vizapi" },
    { include = "vizbase" },
]

keywords = ['viz', 'python', 'library', 'blockchain']

classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Topic :: Software Development :: Libraries :: Python Modules",
]


[tool.poetry.dependencies]
python = "^3.6.1"
graphenelib = "^1.2.0"
toolz = "^0.10.0"
funcy = "^1.14"

[tool.poetry.dev-dependencies]
pre-commit = "^2.2.0"
pytest = "^5.4"
pytest-cov = "^2.7"
pytest-mock = "^3.1.0"

sphinx = "^2.2"
sphinx-autoapi = "^1.3.0"
# used in docs to include markdown files
m2r = "^0.2"
# used in docs to parse pyproject.toml
tomlkit = "^0.6"
