[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "viz-python-lib"
version = "1.0.2"
description = "Python library for VIZ blockchain"
authors = ["Vladimir Kamarzin <vvk@vvk.pp.ru>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/VIZ-Blockchain/viz-python-lib"
packages = [
    { include = "viz" },
    { include = "vizapi" },
    { include = "vizbase" },
]

keywords = ['viz', 'python', 'library', 'blockchain']

classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Topic :: Software Development :: Libraries :: Python Modules",
]


[tool.poetry.dependencies]
python = "^3.8"
graphenelib = "^1.6.0"
toolz = "^0.12.0"
funcy = "^2.0"
docker = "^6.1.3"
aiohttp = {version = ">=3.9.0b0",  python = ">=3.12"}


[tool.poetry.dev-dependencies]
pre-commit = "^3.5.0"
pytest = "^7.4.3"
pytest-cov = "^4.1.0"
pytest-mock = "^3.12.0"

sphinx = "^2.2"
sphinx-autoapi = "^1.4.0"
# used in docs to include markdown files
m2r = "^0.3.1"
# used in docs to parse pyproject.toml
tomlkit = "^0.11.8"

[tool.black]
line-length = 120
skip-string-normalization = true
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.tox
  | \venv
  | build
  | dist
)/
'''
